--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/applied-loan/applied-loan.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/applied-loan/applied-loan.component.scss
@@ -40,7 +40,7 @@
         flex: 0 0 5% !important;        
     }
     button {
-        width: 120px;
+        width: auto;
     }
     .apply-kyc {
 		background: transparent;
