--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/loan-application-form.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/loan-application-form.component.html
@@ -48,7 +48,7 @@
                         <!-- <ng-template> -->
                         <div class="mat-tab-body-content ng-trigger ng-trigger-translateTab"
                             style="padding:0px !important">
-                            <kt-upload-packets [viewpacketsDetails]="customerDetail" [ornamentType]="customerDetail">
+                            <kt-upload-packets [viewpacketsDetails]="customerDetail" [ornamentType]="customerDetail" [masterAndLoanIds]="masterAndLoanIds">
                             </kt-upload-packets>
                         </div>
                         <!-- </ng-template> -->
