--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/approval/approval.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/approval/approval.component.html
@@ -10,7 +10,7 @@
                             <th scope="col"  class="text-center"
                                 *ngIf="viewBMForm || url == 'view-loan'">Branch Manager</th>
                                 <th scope="col" class="text-center"
-                                *ngIf="viewBMForm || url == 'view-loan'">Operational Team</th>
+                                *ngIf="viewOpertaionalForm || url == 'view-loan'">Operational Team</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -34,13 +34,13 @@
                                     [ngClass]="{'cursor-not-allowed':(userType !=5 || this.disable)}"
                                     *ngIf="!controls.applicationFormForBM.value" (click)="approvalOfBM(true,'form')">
                             </td>
-                            <td class="rating-bm text-center" *ngIf="viewBMForm || url == 'view-loan'">
+                            <td class="rating-bm text-center" *ngIf="viewOpertaionalForm || url == 'view-loan'">
                                 <img src="../../../../../../../assets/media/icons/correct.svg"
-                                    [ngClass]="{'cursor-not-allowed':(userType !=5 || this.disable)}"
-                                    *ngIf="controls.applicationFormForBM.value" (click)="approvalOfBM(false,'form')">
+                                    [ngClass]="{'cursor-not-allowed':(userType !=8 || this.disable)}"
+                                    *ngIf="controls.applicationFormForOperatinalTeam.value" (click)="approvalOfOperational(false,'form')">
                                 <img src="../../../../../../../assets/media/icons/incorrect.svg"
-                                    [ngClass]="{'cursor-not-allowed':(userType !=5 || this.disable)}"
-                                    *ngIf="!controls.applicationFormForBM.value" (click)="approvalOfBM(true,'form')">
+                                    [ngClass]="{'cursor-not-allowed':(userType !=8 || this.disable)}"
+                                    *ngIf="!controls.applicationFormForOperatinalTeam.value" (click)="approvalOfOperational(true,'form')">
                             </td>
                         </tr>
                         <tr>
@@ -64,13 +64,13 @@
                                     [ngClass]="{'cursor-not-allowed':(userType !=5 || this.disable)}"
                                     *ngIf="!controls.goldValuationForBM.value" (click)="approvalOfBM(true,'gold')">
                             </td>
-                            <td class="rating-bm text-center" *ngIf="viewBMForm || url == 'view-loan'">
+                            <td class="rating-bm text-center" *ngIf="viewOpertaionalForm || url == 'view-loan'">
                                 <img src="../../../../../../../assets/media/icons/correct.svg"
-                                    [ngClass]="{'cursor-not-allowed':(userType !=5 || this.disable )}"
-                                    *ngIf="controls.goldValuationForBM.value" (click)="approvalOfBM(false,'gold')">
+                                    [ngClass]="{'cursor-not-allowed':(userType !=8 || this.disable )}"
+                                    *ngIf="controls.goldValuationForOperatinalTeam.value" (click)="approvalOfOperational(false,'gold')">
                                 <img src="../../../../../../../assets/media/icons/incorrect.svg"
-                                    [ngClass]="{'cursor-not-allowed':(userType !=5 || this.disable)}"
-                                    *ngIf="!controls.goldValuationForBM.value" (click)="approvalOfBM(true,'gold')">
+                                    [ngClass]="{'cursor-not-allowed':(userType !=8 || this.disable)}"
+                                    *ngIf="!controls.goldValuationForOperatinalTeam.value" (click)="approvalOfOperational(true,'gold')">
                             </td>
                         </tr>
 
@@ -102,15 +102,15 @@
                                     Field
                                     Required</mat-error>
                             </td>
-                            <td class="rating-bm" *ngIf="viewBMForm || url == 'view-loan'">
-                                <select class="form-control" formControlName="loanStatusForBM"
+                            <td class="rating-bm" *ngIf="viewOpertaionalForm || url == 'view-loan'">
+                                <select class="form-control" formControlName="loanStatusForOperatinalTeam"
                                     (change)="resetBM();statusBM()"
-                                    [class.isError]="controls.loanStatusForBM.invalid && controls.loanStatusForBM.touched">
+                                    [class.isError]="controls.loanStatusForOperatinalTeam.invalid && controls.loanStatusForOperatinalTeam.touched">
                                     <option value="pending" [disabled]="true" [selected]="true">Select Status</option>
                                     <option [value]="status.value" *ngFor="let status of branchManager">
                                         {{status.name | titlecase}}</option>
                                 </select>
-                                <mat-error *ngIf="controls.loanStatusForBM.invalid && controls.loanStatusForBM.touched">
+                                <mat-error *ngIf="controls.loanStatusForOperatinalTeam.invalid && controls.loanStatusForOperatinalTeam.touched">
                                     Field
                                     Required</mat-error>
                             </td>
