--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/upload-loan-documents/upload-loan-documents.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/upload-loan-documents/upload-loan-documents.component.html
@@ -215,4 +215,7 @@
             </div>
         </div>
     </div>
+    <div class="col-11 text-right kt-padding-t-15">
+        <kt-button [type]="'button'" [value]="'Save'" (click)="save()"></kt-button>
+    </div>
 </div>
