--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/upload-packets/upload-packets.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/upload-packets/upload-packets.component.html
@@ -128,6 +128,6 @@
     </div>
 
 </div>
-<div class="text-center" *ngIf="packets.controls.length">
-    <kt-button [type]="'button'" [value]="'Save'" (click)="save()" *ngIf="url != 'view-loan'"></kt-button>
+<div class="text-right kt-padding-b-15" *ngIf="packets.controls.length">
+    <kt-button [type]="'button'" [value]="'Next'" (click)="save()"></kt-button>
 </div>
