documents patch value

--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/upload-packets/upload-packets.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/upload-packets/upload-packets.component.html
@@ -45,7 +45,7 @@
                 <thead>
                     <th class="transparent">Packet</th>
                     <th class="transparent">Ornaments</th>
-                    <th class="transparent"></th>
+                    <th class="transparent" *ngIf="url != 'view-loan'"></th>
                 </thead>
                 <tbody>
                     <tr formArrayName="packetOrnamentArray" *ngFor="let packet of packets.controls;index as idx">
@@ -58,7 +58,7 @@
                                 <label class="m-0">{{packet.controls.ornamentsName.value | uppercase  }}</label>
 
                             </td>
-                            <td class="text-gray">
+                            <td class="text-gray" *ngIf="url != 'view-loan'">
                                 <img src="../../../../../../../assets/media/icons/cancel.png" alt="" height="15" (click)="removePacketsData(idx)">
                             </td>
                         </ng-container>
