--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/loan-application-form.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/loan-application-form.component.html
@@ -54,7 +54,7 @@
                         <!-- </ng-template> -->
                     </mat-tab>
                     <mat-tab label="Upload Documents">
-                        <kt-upload-loan-documents [masterAndLoanIds]="masterAndLoanIds"></kt-upload-loan-documents>
+                        <kt-upload-loan-documents [masterAndLoanIds]="masterAndLoanIds" [loanDocumnets]="customerDetail"></kt-upload-loan-documents>
                     </mat-tab>
                     
                 </mat-tab-group>
