--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/upload-loan-documents/upload-loan-documents.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/upload-loan-documents/upload-loan-documents.component.html
@@ -19,7 +19,7 @@
         </div>
         <div class="row justify-content-between">
             <div class="col-4" *ngIf="!show">
-                <div class="input-group mb-3">
+                <div class="input-group mb-3" [class.isError]="controls.loanAgreementCopy.touched && controls.loanAgreementCopy.invalid">
                     <input type="text" class="form-control" placeholder="Select File" aria-label="Recipient's username"
                         aria-describedby="basic-addon2" readonly formControlName="loanAgreementImageName" />
                     <div class="input-group-append">
@@ -28,10 +28,12 @@
                     </div>
                     <input type="file" class="d-none" accept="image/png, image/jpeg" #loanAgreementCopy
                         (change)="fileUpload($event,'loanAgreementCopy')">
+                        <mat-error *ngIf="controls.loanAgreementCopy.touched && controls.loanAgreementCopy.invalid">Field Required</mat-error>
+
                 </div>
             </div>
             <div class="col-4">
-                <div class="input-group mb-3">
+                <div class="input-group mb-3" [class.isError]="controls.pawnCopy.touched && controls.pawnCopy.invalid">
                     <input type="text" class="form-control" placeholder="Select File" aria-label="Recipient's username"
                         aria-describedby="basic-addon2" readonly formControlName="pawnCopyImageName" />
                     <div class="input-group-append">
@@ -40,10 +42,12 @@
                     </div>
                     <input type="file" class="d-none" accept="image/png, image/jpeg" #pawnCopy
                         (change)="fileUpload($event,'pawnCopy')">
+                        <mat-error *ngIf="controls.pawnCopy.touched && controls.pawnCopy.invalid">Field Required</mat-error>
+
                 </div>
             </div>
             <div class="col-4" *ngIf="!show">
-                <div class="input-group mb-3">
+                <div class="input-group mb-3" [class.isError]="controls.schemeConfirmationCopy.touched && controls.schemeConfirmationCopy.invalid">
                     <input type="text" class="form-control" placeholder="Select File" aria-label="Recipient's username"
                         aria-describedby="basic-addon2" readonly formControlName="schemeConfirmationCopyImageName" />
                     <div class="input-group-append">
@@ -52,10 +56,12 @@
                     </div>
                     <input type="file" class="d-none" accept="image/png, image/jpeg" #schemeConfirmationCopy
                         (change)="fileUpload($event,'schemeConfirmationCopy')">
+                        <mat-error *ngIf="controls.schemeConfirmationCopy.touched && controls.schemeConfirmationCopy.invalid">Field Required</mat-error>
+
                 </div>
             </div>
             <div class="col-4" *ngIf="show">
-                <div class="input-group mb-3">
+                <div class="input-group mb-3" [class.isError]="controls.signedCheque.touched && controls.signedCheque.invalid">
                     <input type="text" class="form-control" placeholder="Select File" aria-label="Recipient's username"
                         aria-describedby="basic-addon2" readonly formControlName="signedChequeImageName" />
                     <div class="input-group-append">
@@ -64,10 +70,11 @@
                     </div>
                     <input type="file" class="d-none" accept="image/png, image/jpeg" #signedCheque
                         (change)="fileUpload($event,'signedCheque')">
+                        <mat-error *ngIf="controls.signedCheque.touched && controls.signedCheque.invalid">Field Required</mat-error>
                 </div>
             </div>
             <div class="col-4" *ngIf="show">
-                <div class="input-group mb-3">
+                <div class="input-group mb-3" [class.isError]="controls.declarationCopy.touched && controls.declarationCopy.invalid">
                     <input type="text" class="form-control" placeholder="Select File" aria-label="Recipient's username"
                         aria-describedby="basic-addon2" readonly formControlName="declarationCopyImageName" />
                     <div class="input-group-append">
@@ -76,6 +83,8 @@
                     </div>
                     <input type="file" class="d-none" accept="image/png, image/jpeg" #declarationCopy
                         (change)="fileUpload($event,'declarationCopy')">
+                        <mat-error *ngIf="controls.declarationCopy.touched && controls.declarationCopy.invalid">Field Required</mat-error>
+
                 </div>
             </div>
         </div>
