--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/loan-application-form.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/loan-application-form.component.html
@@ -43,7 +43,7 @@
                             [masterAndLoanIds]="masterAndLoanIds">
                         </kt-approval>
                     </mat-tab>
-                    <mat-tab label="Packets" *ngIf="url == 'packet-image-upload' || (action == 'edit' && customerDetail.loanPacketDetails.length>0)">
+                    <mat-tab label="Packets" *ngIf="url == 'packet-image-upload' || url == 'view-loan'">
                         <!-- <ng-template> -->
                         <div class="mat-tab-body-content ng-trigger ng-trigger-translateTab"
                             style="padding:0px !important">
@@ -52,7 +52,7 @@
                         </div>
                         <!-- </ng-template> -->
                     </mat-tab>
-                    <mat-tab label="Upload Documents"  *ngIf="url == 'packet-image-upload' || (action == 'edit' && customerDetail.loanPacketDetails.length>0)">
+                    <mat-tab label="Upload Documents"  *ngIf="url == 'packet-image-upload' || url == 'view-loan'">
                         <kt-upload-loan-documents [masterAndLoanIds]="masterAndLoanIds" [loanDocumnets]="customerDetail"></kt-upload-loan-documents>
                     </mat-tab>
                     
