--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/applied-loan/applied-loan.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/applied-loan/applied-loan.component.html
@@ -82,7 +82,7 @@
                     <mat-cell *matCellDef="let loan">
                         <div [ngStyle]="{'display': 'inherit'}">
                             <div *ngIf="loan.loanStage.id == 1 ">
-                                <div class="kt-pointer" class="kt-pointer">
+                                <div class="kt-pointer">
                                     <!-- <img src="../../../../../assets/media/icons/action.svg" alt=""> -->
                                     <button (click)="editLoan(loan)" [ngClass]="{'cursor-not-allowed':  !(((loan.loanStatusForAppraiser != 'pending' || loan.loanStatusForAppraiser != 'rejected')
                                     && this.userType == 7) && edit)}"
@@ -90,7 +90,7 @@
                                 </div>
                             </div>
                             <div *ngIf="loan.loanStage.id == 2">
-                                <div class="kt-pointer" class="kt-pointer">
+                                <div class="kt-pointer" >
                                     <!-- <img src="../../../../../assets/media/icons/action.svg" alt=""> -->
                                     <button (click)="editLoan(loan)" [ngClass]="{'cursor-not-allowed': !(((loan.loanStatusForBM == 'pending' || loan.loanStatusForBM == 'rejected' ||loan.loanStatusForBM == 'incomplete')
                                     && this.userType == 5 && loan.loanStatusForAppraiser == 'approved')&&edit)}"
@@ -98,7 +98,7 @@
                                 </div>
                             </div>
                             <div *ngIf="loan.loanStage.id == 7">
-                                <div class="kt-pointer" class="kt-pointer">
+                                <div class="kt-pointer" >
                                     <!-- <img src="../../../../../assets/media/icons/action.svg" alt=""> -->
                                     <button (click)="editLoan(loan)" [ngClass]="{'cursor-not-allowed': !(((loan.loanStatusForOperatinalTeam == 'pending' || loan.loanStatusForOperatinalTeam == 'rejected' ||loan.loanStatusForOperatinalTeam == 'incomplete')
                                     && this.userType == 8 && loan.loanStatusForBM == 'approved')&&edit)}"
@@ -106,7 +106,7 @@
                                 </div>
                             </div>
                             <div *ngIf="loan.loanStage.id == 3">
-                                <div class="kt-pointer" class="kt-pointer">
+                                <div class="kt-pointer" >
                                     <!-- <img src="../../../../../assets/media/icons/action.svg" alt=""> -->
                                     <button (click)="packetImageUpload(loan)" class="red-button" 
                                     [ngClass]="{'cursor-not-allowed':!edit}">Assign
@@ -114,13 +114,17 @@
                                 </div>
                             </div>
                             <div *ngIf="loan.loanStage.id == 4">
-                                <div class="kt-pointer" class="kt-pointer">
-                                    <button (click)="disburse(loan)" [ngClass]="{'cursor-not-allowed':!edit}" class="green-button">Disburse Amount</button>
-
+                                <div class="kt-pointer mt-1">
+                                    <button (click)="disburse(loan.customerLoan[0].id,loan.id)" *ngIf="!loan?.customerLoan[0]?.disbursed" [ngClass]="{'cursor-not-allowed':!edit}" class="green-button">Disburse Amount</button>
+                                    <button class="warning-button" *ngIf="loan?.customerLoan[0]?.disbursed">Disbursed</button>
+                                </div>
+                                <div class="kt-pointer my-2" *ngIf="loan?.customerLoan[1]">
+                                    <button (click)="disburse(loan.customerLoan[1].id,loan.id)" *ngIf="!loan?.customerLoan[1]?.disbursed" [ngClass]="{'cursor-not-allowed':!edit}" class="green-button">Disburse Amount</button>
+                                    <button class="warning-button " *ngIf="loan?.customerLoan[1]?.disbursed">Disbursed</button>
                                 </div>
                             </div>
                             <div *ngIf="loan.loanStage.id == 5">
-                                <div class="kt-pointer" class="kt-pointer">
+                                <div class="kt-pointer" >
                                     <button class="warning-button">Disbursed</button>
 
                                 </div>
