--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/approval/approval.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/approval/approval.component.html
@@ -5,12 +5,12 @@
                 <table class="table">
                     <thead>
                         <tr>
-                            <th scope="col" >Field</th>
-                            <th scope="col"  class="text-center">Appraiser</th>
-                            <th scope="col"  class="text-center"
-                                *ngIf="viewBMForm || url == 'view-loan'">Branch Manager</th>
-                                <th scope="col" class="text-center"
-                                *ngIf="viewOpertaionalForm || url == 'view-loan'">Operational Team</th>
+                            <th scope="col">Field</th>
+                            <th scope="col" class="text-center">Appraiser</th>
+                            <th scope="col" class="text-center" *ngIf="viewBMForm || url == 'view-loan'">Branch Manager
+                            </th>
+                            <th scope="col" class="text-center" *ngIf="viewOpertaionalForm || url == 'view-loan'">
+                                Operational Team</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -37,10 +37,12 @@
                             <td class="rating-bm text-center" *ngIf="viewOpertaionalForm || url == 'view-loan'">
                                 <img src="../../../../../../../assets/media/icons/correct.svg"
                                     [ngClass]="{'cursor-not-allowed':(userType !=8 || this.disable)}"
-                                    *ngIf="controls.applicationFormForOperatinalTeam.value" (click)="approvalOfOperational(false,'form')">
+                                    *ngIf="controls.applicationFormForOperatinalTeam.value"
+                                    (click)="approvalOfOperational(false,'form')">
                                 <img src="../../../../../../../assets/media/icons/incorrect.svg"
                                     [ngClass]="{'cursor-not-allowed':(userType !=8 || this.disable)}"
-                                    *ngIf="!controls.applicationFormForOperatinalTeam.value" (click)="approvalOfOperational(true,'form')">
+                                    *ngIf="!controls.applicationFormForOperatinalTeam.value"
+                                    (click)="approvalOfOperational(true,'form')">
                             </td>
                         </tr>
                         <tr>
@@ -67,10 +69,12 @@
                             <td class="rating-bm text-center" *ngIf="viewOpertaionalForm || url == 'view-loan'">
                                 <img src="../../../../../../../assets/media/icons/correct.svg"
                                     [ngClass]="{'cursor-not-allowed':(userType !=8 || this.disable )}"
-                                    *ngIf="controls.goldValuationForOperatinalTeam.value" (click)="approvalOfOperational(false,'gold')">
+                                    *ngIf="controls.goldValuationForOperatinalTeam.value"
+                                    (click)="approvalOfOperational(false,'gold')">
                                 <img src="../../../../../../../assets/media/icons/incorrect.svg"
                                     [ngClass]="{'cursor-not-allowed':(userType !=8 || this.disable)}"
-                                    *ngIf="!controls.goldValuationForOperatinalTeam.value" (click)="approvalOfOperational(true,'gold')">
+                                    *ngIf="!controls.goldValuationForOperatinalTeam.value"
+                                    (click)="approvalOfOperational(true,'gold')">
                             </td>
                         </tr>
 
@@ -104,13 +108,14 @@
                             </td>
                             <td class="rating-bm" *ngIf="viewOpertaionalForm || url == 'view-loan'">
                                 <select class="form-control" formControlName="loanStatusForOperatinalTeam"
-                                    (change)="resetBM();statusBM()"
+                                    (change)="resetOT();statusOT()"
                                     [class.isError]="controls.loanStatusForOperatinalTeam.invalid && controls.loanStatusForOperatinalTeam.touched">
                                     <option value="pending" [disabled]="true" [selected]="true">Select Status</option>
                                     <option [value]="status.value" *ngFor="let status of branchManager">
                                         {{status.name | titlecase}}</option>
                                 </select>
-                                <mat-error *ngIf="controls.loanStatusForOperatinalTeam.invalid && controls.loanStatusForOperatinalTeam.touched">
+                                <mat-error
+                                    *ngIf="controls.loanStatusForOperatinalTeam.invalid && controls.loanStatusForOperatinalTeam.touched">
                                     Field
                                     Required</mat-error>
                             </td>
@@ -119,6 +124,38 @@
                 </table>
             </div>
         </div>
+
+        <div class="row justify-content-center"
+            *ngIf="userType == 7 && controls.loanStatusForBM.value == 'incomplete' && controls.commentByBM.value">
+            <div class="col-7">
+                <div class="row">
+                    <div class="col-4">
+                        <label for="">Reason by Branch Manager for {{controls.loanStatusForBM.value}}</label>
+                    </div>
+                    <div class="col-8">
+                        <label for="">{{controls.commentByBM.value }}</label>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="row justify-content-center"
+            *ngIf="(userType == 7 || userType == 5) && controls.loanStatusForOperatinalTeam.value == 'incomplete' && controls.commentByOperatinalTeam.value">
+            <div class="col-7">
+                <div class="row">
+                    <div class="col-4">
+                        <label for="">Reason by Operation Team for
+                            {{controls.loanStatusForOperatinalTeam.value}}</label>
+                    </div>
+                    <div class="col-8">
+                        <label for="">{{controls.commentByOperatinalTeam.value }}</label>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
         <div class="row justify-content-center "
             *ngIf="controls.loanStatusForAppraiser.value && controls.loanStatusForAppraiser.value != 'approved'">
             <div class="col-7">
@@ -161,12 +198,24 @@
             </div>
         </div>
         <div class="row justify-content-center "
-            *ngIf="controls.loanStatusForBM.value != 'pending' && controls.loanStatusForBM.value != 'approved'">
+            *ngIf="userType == 5 && controls.loanStatusForBM.value != 'pending' && controls.loanStatusForBM.value != 'approved'">
             <div class="col-8">
                 <mat-form-field class="w-100">
 
                     <textarea cols="4" rows="3" matInput formControlName="commentByBM"
                         placeholder="Reason By Branch Manager"></textarea>
+                    <mat-error>Field Required
+                    </mat-error>
+                </mat-form-field>
+            </div>
+        </div>
+        <div class="row justify-content-center "
+            *ngIf="userType == 8 && controls.loanStatusForOperatinalTeam.value != 'pending' && controls.loanStatusForOperatinalTeam.value != 'approved'">
+            <div class=" col-8">
+                <mat-form-field class="w-100">
+
+                    <textarea cols="4" rows="3" matInput formControlName="commentByOperatinalTeam"
+                        placeholder="Reason By Operational Team"></textarea>
                     <mat-error>Field Required
                     </mat-error>
                 </mat-form-field>
