bhushan::minor chnages

--- a/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-personal/user-personal.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-personal/user-personal.component.html
@@ -140,7 +140,8 @@
                                             [class.isError]="controls.occupationId.touched && controls.occupationId.invalid">
                                             <option value=null [selected]="true">Select Occupation
                                             </option>
-                                            <option [value]="occ.id" *ngFor="let occ of occupations;"> {{occ.name}}
+                                            <option [value]="occ.id" *ngFor="let occ of occupations;">
+                                                {{occ.name| titlecase}}
                                             </option>
                                         </select>
                                         <mat-error
