--- a/gold-admin-frontend/src/app/views/pages/broker/shop/shop.component.html
+++ b/gold-admin-frontend/src/app/views/pages/broker/shop/shop.component.html
@@ -33,8 +33,8 @@
                             <span
                                 class="currency">{{product.productPrice[0].finalProductPrice | indianCurrencyFormat}}</span>
                         </p>
-                        <kt-button [value]='"Order Now"' [type]='"button"' (action)="action(product.id)"
-                            class="kt-padding-r-5"></kt-button>
+                        <kt-button *ngxPermissionsOnly="['orderAdd']" [value]='"Order Now"' [type]='"button"'
+                            (action)="action(product.id)" class="kt-padding-r-5"></kt-button>
                     </div>
                 </div>
             </div>
@@ -85,8 +85,8 @@
                                     <h5 class="text-color font-weight-bold pt-4 currency">
                                         {{product.productPrice[0].finalProductPrice | indianCurrencyFormat}}
                                     </h5>
-                                    <kt-button [value]='"Order Now"' [type]='"button"' (action)="action(product.id)"
-                                        class="py-3"></kt-button>
+                                    <kt-button *ngxPermissionsOnly="['orderAdd']" [value]='"Order Now"'
+                                        [type]='"button"' (action)="action(product.id)" class="py-3"></kt-button>
                                 </div>
                             </div>
                         </div>
